Fixed spacing issues on about page

--- a/css/index.css
+++ b/css/index.css
@@ -795,7 +795,8 @@ header .header {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  column-gap: 14rem;
+  column-gap: 3rem;
+  margin-left: 9.5rem;
   margin-bottom: 5.6rem;
 }
 #__payapi-about .content .our-values:last-child {
@@ -809,6 +810,7 @@ header .header {
   line-height: 4rem;
   font-family: "DM Serif Display", serif;
   color: #36536b;
+  width: 25.5rem;
 }
 .content .our-values p {
   font-size: 1.5rem;
@@ -818,7 +820,6 @@ header .header {
   width: 63.5rem;
   font-weight: 500;
   color: #6c8294 !important;
-  margin-left: 4.6rem;
 }
 #__payapi-about .content .showcase {
   width: 100vw;
