--- a/less/about.less
+++ b/less/about.less
@@ -38,7 +38,8 @@ header .header {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  column-gap: 14rem;
+  column-gap: 3rem;
+  margin-left: 9.5rem;
   margin-bottom: 5.6rem;
 }
 
@@ -52,13 +53,13 @@ header .header {
 
 .content .our-values h2 {
   .h3-big();
+  width: 25.5rem;
 }
 .content .our-values p {
   .body-copy();
   width: 63.5rem;
   font-weight: 500;
   color: @light-san-juan-blue !important;
-  margin-left: 4.6rem;
 }
 
 #__payapi-about .content .showcase {
